--- a/day05.ipynb
+++ b/day05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,30 +19,25 @@
     "  input = f.read()\n",
     "\n",
     "ordering_rules = [list(map(int, rule.split(\"|\"))) for rule in input.split(\"\\n\\n\")[0].split(\"\\n\")]\n",
-    "page_updates =[list(map(int, list(filter(None, update.split(\",\"))))) for update in input.split(\"\\n\\n\")[1].split(\"\\n\")][:-1]"
+    "page_updates = [\n",
+    "  list(map(int, list(filter(None, update.split(\",\")))))\n",
+    "  for update in input.split(\"\\n\\n\")[1].split(\"\\n\")\n",
+    "][:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "graph = nx.DiGraph()\n",
-    "graph.add_edges_from(ordering_rules)\n",
-    "\n",
-    "def constraint_checker(g, updates):\n",
-    "    for i in range(len(updates))[:-1]:\n",
-    "        for n in updates[i+1:]:\n",
-    "            if g.has_edge(n, updates[i]):\n",
-    "                return False, i, n\n",
-    "\n",
-    "    return True, -1, -1\n"
+    "graph.add_edges_from(ordering_rules)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +46,7 @@
        "4790"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,14 +55,14 @@
     "# Problem 1\n",
     "sum = 0\n",
     "for x in page_updates:\n",
-    "    if constraint_checker(graph, x)[0]:\n",
-    "        sum += x[int((len(x))/2)]\n",
+    "    if x in list(nx.all_topological_sorts(graph.subgraph(x))):\n",
+    "        sum += x[(len(x))//2]\n",
     "sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +71,7 @@
        "6319"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,24 +80,11 @@
     "# Problem 2\n",
     "sum = 0\n",
     "for x in page_updates:\n",
-    "    res = constraint_checker(graph, x)\n",
-    "    if res[0]:\n",
-    "        continue\n",
-    "    else:\n",
-    "        while(not res[0]):\n",
-    "            idx = x.index(res[2])\n",
-    "            x[res[1]], x[idx] = x[idx], x[res[1]]\n",
-    "            res = constraint_checker(graph, x)\n",
-    "        sum += x[int((len(x))/2)]\n",
+    "    if x not in list(nx.all_topological_sorts(graph.subgraph(x))):\n",
+    "        sum += list(nx.topological_sort(graph.subgraph(x)))[len(x)//2]\n",
+    "\n",
     "sum"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
