--- a/day05.ipynb
+++ b/day05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,33 +11,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"inputs/day05\", \"r\") as f:\n",
     "  input = f.read()\n",
     "\n",
-    "ordering_rules = [list(map(int, rule.split(\"|\"))) for rule in input.split(\"\\n\\n\")[0].split(\"\\n\")]\n",
+    "ordering_rules = [\n",
+    "  list(map(int, rule.split(\"|\")))\n",
+    "  for rule in input.split(\"\\n\\n\")[0].split(\"\\n\")\n",
+    "]\n",
     "page_updates = [\n",
     "  list(map(int, list(filter(None, update.split(\",\")))))\n",
     "  for update in input.split(\"\\n\\n\")[1].split(\"\\n\")\n",
-    "][:-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "][:-1]\n",
+    "\n",
     "graph = nx.DiGraph()\n",
     "graph.add_edges_from(ordering_rules)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +42,7 @@
        "4790"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +67,7 @@
        "6319"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
