Update solution day 2

--- a/day02.ipynb
+++ b/day02.ipynb
@@ -11,66 +11,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"inputs/day02\", \"r\") as f:\n",
     "  input = list(f.readlines())\n",
-    "  input = [list(map(int, x.split(\" \"))) for x in input]"
+    "  input = [list(map(int, x.split(\" \"))) for x in input]\n",
+    "\n",
+    "checker = lambda y: all(map(lambda x: 0<x<4, y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(490)"
+       "490"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Problem 1\n",
-    "sum([((np.diff(l) > 0) & (np.diff(l) < 4)).all() or ((np.diff(l) < 0) & (np.diff(l) > -4)).all() for l in input])"
+    "sum([checker(np.diff(l)) or checker(-np.diff(l)) for l in input])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(536)"
+       "536"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Problem 2\n",
-    "input2 = [[np.delete(l, x) for x in range(len(l))] for l in input]\n",
-    "\n",
-    "sum = 0\n",
-    "for l in input2:\n",
-    "  for l2 in l:\n",
-    "    diffs = np.diff(l2)\n",
-    "    diff_res = ([((diffs > 0) & (diffs < 4)).all() or ((diffs < 0) & (diffs > -4)).all()])\n",
-    "    if diff_res[0]:\n",
-    "      sum += diff_res[0]\n",
-    "      break\n",
-    "\n",
-    "sum\n"
+    "sum([any([checker(np.diff(cl)) or checker(-np.diff(cl)) for cl in l]) for l in [[np.delete(l, x) for x in range(len(l))] for l in input]])"
    ]
   }
  ],
@@ -90,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
