--- a/day13.ipynb
+++ b/day13.ipynb
@@ -2,50 +2,90 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import regex as re"
+    "import regex as re\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"inputs/test13\", \"r\") as f:\n",
+    "with open(\"inputs/day13\", \"r\") as f:\n",
     "  puzzle_input =  f.read().strip().split(\"\\n\\n\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Button A: X+94, Y+34\n",
-      "Button B: X+22, Y+67\n",
-      "Prize: X=8400, Y=5400\n",
-      "[94, 34]\n",
-      "[22, 67]\n",
-      "[8400, 5400]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "28138"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Problem 1\n",
+    "res = 0\n",
     "for machine in puzzle_input:\n",
-    "  print(machine)\n",
     "  coords = re.findall(r\"X.(\\d+), Y.(\\d+)\", machine)\n",
-    "  button_a = [int(i) for i in coords[0]]\n",
-    "  button_b = [int(i) for i in coords[1]]\n",
-    "  target = [int(i) for i in coords[2]]\n",
-    "  break"
+    "  button_a = np.array([int(i) for i in coords[0]])\n",
+    "  button_b = np.array([int(i) for i in coords[1]])\n",
+    "  target = np.array([int(i) for i in coords[2]])\n",
+    "\n",
+    "  buttons = np.stack((button_a, button_b)).T\n",
+    "  if np.linalg.matrix_rank(buttons) == 2:\n",
+    "    sol = (np.linalg.solve(buttons, target))\n",
+    "    if all(list(map(lambda i: round(i, 2).is_integer(), sol))):\n",
+    "      res += sol.dot([3,1])\n",
+    "\n",
+    "int(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "108394825772874"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Problem 2\n",
+    "res = 0\n",
+    "for machine in puzzle_input:\n",
+    "  coords = re.findall(r\"X.(\\d+), Y.(\\d+)\", machine)\n",
+    "  button_a = np.array([int(i) for i in coords[0]])\n",
+    "  button_b = np.array([int(i) for i in coords[1]])\n",
+    "  target = np.array([int(i) for i in coords[2]])+10000000000000\n",
+    "\n",
+    "  buttons = np.stack((button_a, button_b)).T\n",
+    "  if np.linalg.matrix_rank(buttons) == 2:\n",
+    "    sol = (np.linalg.solve(buttons, target))\n",
+    "    if all(list(map(lambda i: round(i, 2).is_integer(), sol))):\n",
+    "      res += sol.dot([3,1])\n",
+    "\n",
+    "int(res)"
    ]
   }
  ],
